# catwalk

./: .gitignore  AGENTS.md  AI_ORCHESTRATION.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_FIXES.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  LICENSE  README.md  REGISTRY_UI_IMPROVEMENTS.md  ROADMAP_REVISION_SUMMARY.md  SECURITY.md  SETUP.md  alembic.ini  critical_handover_prompt.md  debug-jwt.mjs  pr_6.diff  pr_details.json  test-jwt-match.sh  test_output.txt  vercel.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  fly.toml  pyproject.toml  pytest.ini  requirements.txt  verify_registry.py
backend/alembic/: env.py
backend/alembic/versions/: 42a866551ae2_add_access_token_to_deployments_manual.py  62ab80044db9_add_machine_id_to_deployment.py  670fe05b0579_add_error_message_to_deployment.py  88d56ab21fcc_add_analysis_cache_table.py  a1b2c3d4e5f6_add_user_and_user_settings_tables.py  d7f54c12f087_initial_models.py  da3de5c8cc0a_update_timestamps_to_use_server_default_.py
backend/app/: main.py
backend/app/api/: analyze.py  auth.py  deployments.py  deployments_auth.py  forms.py  github.py  health.py  mcp.py  mcp_streamable.py  registry.py  settings.py  users.py
backend/app/core/: auth.py  config.py  form_schemas.py
backend/app/db/: session.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  analysis_cache.py  credential.py  deployment.py  user.py  user_settings.py
backend/app/prompts/: analysis_prompt.py
backend/app/schemas/: __init__.py  deployment.py  (+2 more)
backend/tests/: api_surface.md  test_registry_forms.py
(+139 files in other folders)
