[project]
name = "catwalk-live"
version = "0.1.0"
description = "A Vercel-like platform for deploying MCP servers to Fly.io with Streamable HTTP"
license = { text = "MIT" }
authors = [
    { name = "Jordan Hindo", email = "zenchant@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["mcp", "model-context-protocol", "fly.io", "fastapi", "deployment"]
dependencies = [
    "fastapi",
    "openai>=2.11.0",
    "sse-starlette>=3.0.3",
    "uvicorn[standard]",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
